@@ -30,8 +30,12 @@ namespace Marvel {
 	PyObject* set_plot_xlimits     (PyObject* self, PyObject* args, PyObject* kwargs);
 	PyObject* set_plot_ylimits     (PyObject* self, PyObject* args, PyObject* kwargs);
 
+	// annotations
+	PyObject* add_annotation       (PyObject* self, PyObject* args, PyObject* kwargs);
+	PyObject* delete_annotation    (PyObject* self, PyObject* args, PyObject* kwargs);
+
 	// series
-	PyObject* add_image_series       (PyObject* self, PyObject* args, PyObject* kwargs);
+	PyObject* add_image_series     (PyObject* self, PyObject* args, PyObject* kwargs);
 	PyObject* add_pie_series       (PyObject* self, PyObject* args, PyObject* kwargs);
 	PyObject* add_line_series      (PyObject* self, PyObject* args, PyObject* kwargs);
 	PyObject* add_bar_series       (PyObject* self, PyObject* args, PyObject* kwargs);
